# SIGMAinterpretator

./: .gitignore  Bor_8h.html  Bor_8h.js  Bor_8h__dep__incl.dot  Bor_8h__dep__incl.map  Bor_8h__dep__incl.md5  Bor_8h__incl.dot  Bor_8h__incl.map  Bor_8h__incl.md5  Bor_8h_source.html  CMakeCache.txt  CNAME  CodeGen_8cpp.html  CodeGen_8cpp__incl.map  CodeGen_8cpp__incl.md5  CodeGen_8cpp_source.html  Codegen_8h.html  Codegen_8h.js  Codegen_8h__dep__incl.map  Codegen_8h__dep__incl.md5  Codegen_8h__incl.map  Codegen_8h__incl.md5  Codegen_8h_source.html  Doxyfile  LexemAnalyzer_8cpp.html  LexemAnalyzer_8cpp.js  LexemAnalyzer_8cpp__incl.dot  LexemAnalyzer_8cpp__incl.map  LexemAnalyzer_8cpp__incl.md5  LexemAnalyzer_8cpp_source.html  LexemAnalyzer_8h.html  LexemAnalyzer_8h.js  LexemAnalyzer_8h__dep__incl.dot  LexemAnalyzer_8h__dep__incl.map  LexemAnalyzer_8h__dep__incl.md5  LexemAnalyzer_8h__incl.dot  LexemAnalyzer_8h__incl.map  LexemAnalyzer_8h__incl.md5  LexemAnalyzer_8h_source.html  Lexem_8cpp.html  (+136 more)
backend/: CMakeLists.txt  Dockerfile
backend/include/: Bor.h  Codegen.h  Lexem.cpp  Lexem.h  LexemAnalyzer.h  RPN.h  Semantic.h  SyntaxAnalyzer.h  cell.h
backend/lib/: Lexem.h
backend/src/: CodeGen.cpp  Lexem.cpp  LexemAnalyzer.cpp  RPN.cpp  Semantic.cpp  SyntaxAnalyzer.cpp  main.cpp
backend/test/: workword
frontend/: index.html  package-lock.json  package.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+43 more)
(+22 files in other folders)
